--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -5,52 +5,73 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 :root{
-  --background-color-dark: #000;
+  --background-color-dark: #080808;
 }
 
 body {
-  position: relative;
   background-color: var(--background-color-dark);
   font-family: "IBM Plex Sans", sans-serif;
 }
 
-main {
-  height: 450px;
-  width: 480px;
-  background: radial-gradient(circle 250px, rgba(207 0 88 / 70%), #000);
-  border-radius: 46% 54% 55% 45% / 28% 78% 22% 72% ;
-  -webkit-animation-duration: 15s;
-  animation-duration: 15s;
-  animation-iteration-count: infinite;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-name: borderAnimation;
-  animation-name: borderAnimation;
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
-  animation-timing-function: ease-in-out;
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+                    /*clock*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+.alarm {
+  position: relative;
+  min-height: 450px;
+  width: 450px;
+  justify-content: center;
+  align-items: center;
+  background: radial-gradient(circle 250px, rgba(207 0 88 / 70%), var(--background-color-dark));
+  border-radius: 50%;
+  transition: width 150ms ease-in-out;
+  animation: borderAnimation 13s infinite ease-in-out;
 }
 
 @keyframes borderAnimation {
-  0% {border-radius: 10% 96% 13% 92% / 93% 5% 95% 17% ;}
-  10% {border-radius: 55% 45% 62% 38% / 20% 83% 17% 80% ;}
-  20% {border-radius: 69% 31% 69% 31% / 9% 89% 11% 91% ;}
-  30% {border-radius: 80% 20% 79% 21% / 4% 94% 6% 96% ;}
-  40% {border-radius: 90% 10% 85% 15% / 0% 98% 2% 100% ;}
-  50% {border-radius: 96% 4% 92% 8% / 0% 100% 0% 100% ;}
-  60% {border-radius: 46% 54% 55% 45% / 28% 78% 22% 72% ; }
-  70% {border-radius: 12% 88% 20% 80% / 79% 17% 83% 21% ;}
-  80% {border-radius: 29% 71% 31% 69% / 58% 40% 60% 42% ;}
-  90% {border-radius: 38% 62% 41% 59% / 35% 65% 35% 65% ;}
-  100% {border-radius: 10% 96% 13% 92% / 93% 5% 95% 17% ;}
+  0% {
+    border-radius: 45% 55% 55% 45% / 28% 72% 28% 72%;
+  }
+  10% {
+    border-radius: 58% 42% 48% 52% / 40% 60% 40% 60%;
+  }
+  20% {
+    border-radius: 64% 36% 56% 44% / 50% 50% 50% 50%;
+  }
+  30% {
+    border-radius: 52% 48% 60% 40% / 60% 40% 60% 40%;
+  }
+  40% {
+    border-radius: 70% 30% 50% 50% / 45% 55% 45% 55%;
+  }
+  50% {
+    border-radius: 55% 45% 55% 45% / 35% 65% 35% 65%;
+  }
+  60% {
+    border-radius: 45% 55% 55% 45% / 28% 72% 28% 72%;
+  }
+  70% {
+    border-radius: 52% 48% 60% 40% / 60% 40% 60% 40%;
+  }
+  80% {
+    border-radius: 64% 36% 56% 44% / 50% 50% 50% 50%;
+  }
+  90% {
+    border-radius: 58% 42% 48% 52% / 40% 60% 40% 60%;
+  }
+  100% {
+    border-radius: 45% 55% 55% 45% / 28% 72% 28% 72%;
+  }
 }
 
-.alarm h3{
+.alarm h3 {
   font-size: 22px;
   font-weight: 500;
   color: #fff;
   text-align: left;
   font-family: inherit;
+  width: 298px;
 }
 
 .alarm .clock h1{
@@ -74,25 +95,161 @@ main {
 
 .alarm .add_btn i:hover {
   filter: invert(0.8);
-  transition: all 150ms ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+                    /*alarm-list*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+.alarm_list {
+  /* display: none; */
+  margin-top: 18px;
+  outline: 2px solid #fff;
+  border-radius: 6px;
+  width: 298px;
+  max-height: 130px;
+  overflow: scroll;
+  scrollbar-width: none;
+}
+
+.alarm_list .alarm_list_item {
+  border-bottom: 2px solid #fff;
+  padding: 16px;
+  align-items: center;
+}
+
+.alarm_list .alarm_list_item:last-child {
+  border: none !important;
+}
+
+.alarm_list .alarm_list_item h3 {
+  color: #fff;
+  font-weight: 500;
+  font-family: inherit;
+  font-size: 22px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 23px;
+}
+
+input:checked {
+  position: relative;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: -2px;
+  right: 0;
+  bottom: 0;
+  background-color: #a9a9a9;
+  transition: 0.4s;
+  border-radius: 25px;
+  border: 1px solid rgb(255 255 255 / 20%);
+  box-shadow: inset 1px 2px 5px rgba(0,0,0,0.3);
+}
+
+.slider::before {
+  content: "";
+  top: 3px;
+  bottom: 3px;
+  left: 3px;
+  right: 0;
+  position: absolute;
+  background-color: #fff;
+  height: auto;
+  width: 18px;
+  border-radius: 50%;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #cb0222;
+  box-shadow: inset 1px 2px 5px rgba(0,0,0,0.3);
+}
+
+input:checked + .slider::before {
+  content: "";
+  transform: translateX(15px);
+}
+
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+                    /*set alarm*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 .set_alarm {
-  display: none;
-  gap: 8px;
-  background: rgba(30 30 30 / 90%);
+  visibility: hidden;
   width: 100%;
   height: 100%;
+  background: rgba(30 30 30 / 90%);
+  transition: all 0.3s ease-in-out;
+}
+
+.set_alarm .alarm_field {
+  margin-top: 50px;
+  gap: 22px;
+  align-items: center;
+  justify-content: flex-start;
+  height: 180px;
+}
+
+.set_alarm .alarm_field p {
+  display: none;
+  color: tomato;
+  font-size: 26px;
+  font-family: inherit;
+  text-align: center;
+  line-height: 26px;
+  background-color: rgb(30, 30, 30);
+  transition: all 250ms ease-in-out;
+  max-width: 610px;
+}
+
+.set_alarm .alarm_field .buttons button {
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  font-family: inherit;
+  padding: 8px 12px 9px 12px;
+  color: #fff;
+  border: 2px solid #fff !important;
+  position: relative;
+  transition: all 250ms ease-in-out;
+  background: rgb(30, 30, 30);
+}
+
+.set_alarm .alarm_field .buttons {
+  gap: 24px;
+}
+
+.set_alarm .alarm_field .buttons button:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.set_alarm  .alarm_field .input_fields {
+  gap: 8px;
   align-items: center;
   justify-content: center;
 }
 
-.set_alarm p {
+.set_alarm .alarm_field .input_fields p {
+  display: block !important;
   color: #fff;
+  width: auto !important;
   font-size: 32px;
+  font-family: inherit;
+  text-align: center;
 }
 
-input[type="number"], input[list="time_part"] {
+input[type="text"], input[list="time_part"] {
   background: rgb(30, 30, 30);
   padding: 0px 10px;
   max-width: 100px;
@@ -103,7 +260,7 @@ input[type="number"], input[list="time_part"] {
 }
 
 input[list="time_part"] {
-  margin-left: 16px;
+  margin-left: 18px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -114,7 +271,34 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type=text] {
   -moz-appearance: textfield;
 }
 
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+                    /*phone media queries*/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+@media only screen and (max-width: 450px) {
+  .alarm {
+    min-height: 450px;
+    width: 380px;
+    background: radial-gradient(circle 210px, rgba(207 0 88 / 70%), var(--background-color-dark));
+  }
+
+  .set_alarm  .alarm_field .input_fields {
+    gap: 4px;
+  }
+
+  input[type="text"], input[list="time_part"] {
+    scale: 0.8;
+  }
+
+  input[list="time_part"] {
+    margin-left: 12px;
+  }
+
+  .set_alarm .alarm_field p {
+    scale: 0.8;
+  }
+}
